# water_level_model_MSWEP

./: .gitignore  ABLATION_README.md  BASIN_IDS_EXTRACTION_SUMMARY.md  EXTRACT_BASINS_USAGE.md  MSWEP_COVERAGE_ANALYSIS_SUMMARY.md  PER_BASIN_QUALIFIERS_SUMMARY.md  PER_BASIN_TIME_RANGES_SUMMARY.md  README.md  RUNTIME_CONFIG_SUMMARY.md  actual_basin_ids.txt  actual_basin_ids_report.txt  actual_basin_ids_simple.txt  actual_missing_in_mswep.txt  analyze_919_basins_time_summary.py  analyze_validated_basins_timerange.py  basin_ids.csv  basin_ids_for_qualifiers.txt  basin_ids_with_attrs.csv  basin_selection_flow_explained.md  check_GPU.py  check_extracted_1000_vs_mswep.py  check_mswep_coverage.py  compare_actual_vs_mswep.py  config.py  create_sample_data.py  debug_all_attrs.py  debug_attrs.py  debug_check_attr_vars.py  debug_dimensions.py  debug_forcing_data.txt  debug_paths.py  debug_target_data.py  extract_919_basins_timeranges.py  extract_actual_basin_ids.py  extract_basin_attrs.py  extract_basin_ids_from_csv.py  extract_basins_by_logic.py  extract_per_basin_config.py  extract_runtime_config.py  extract_validated_1000_basins.py  (+61 more)
qualifiers_cache_test/: 01434000_2023-01-01_2023-01-31.json  01646500_2023-01-01_2023-01-31.json
qualifiers_fetcher/: BASIN_ID_FIX.md  BATCH_FETCH_SUMMARY.md  FULL_RANGE_GUIDE.md  PATH_UPDATE.md  PER_BASIN_FETCH_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  config.py  export_camelsh_data.py  fetch_full_range.py  fetch_per_basin_timeranges.py  requirements.txt  run_quick.py  usage_examples.py  usgs_qualifiers_fetcher.py
(+10 files in other folders)
